# ska-sdp-global-sky-model

./: .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .release  =1.0.0  CHANGELOG.md  CHANGELOG.rst  CHANGELOG.rtd  CODEOWNERS  Dockerfile  LICENSE  MANIFEST.skao.int  Makefile  README.md  README.rst  UPLOAD_INTERFACE.md  docker-compose.yml  gsm_schema_0.0.1.sql  initdb-pgsphere.sh  pyproject.toml  sonar-project.properties
charts/ska-sdp-global-sky-model/: Chart.yaml  values.yaml
charts/ska-sdp-global-sky-model/templates/: NOTES.txt  _helpers.tpl  app-config.yaml  db-config.yaml  db-secrets.yaml  gsm.yaml  ingress.yaml
db/: init_h3c.sql  init_q3c.sql
docs/: conf.py
docs/source/: conf.py  index.rst
docs/src/: conf.py  index.rst
docs/src/design/: database.rst  lsm-file-structure.rst  overview.rst  request-lsm.rst  sky-model-datasets.rst  upload-gsm.rst
docs/src/developer/: deployment.rst  development.rst
docs/src/developerguide/: Database.rst  Deployment.rst  Development.rst  database.rst  deployment.rst  development.rst
docs/src/releases/: Changelog.rst  changelog.rst
docs/src/user/: api-use.rst  cli-use.rst  get-data.rst  overview.rst  sky-model-datasets.rst
docs/src/userguide/: api_use.rst  batch-upload.rst  batch_upload.rst  catalogue-metadata.rst  gsm-cleanup.rst  lsm_file_structure.rst  overview.rst  querying-data.rst  request-lsm.rst  requesting_a_lsm.rst  sky_model_datasets.rst  viewing_data_in_browser.rst
examples/: README.md  request_lsm_demo.py
gsm_schema/: gsm_schema.py
images/ska-sdp-global-sky-model-api/: Dockerfile
images/ska-sdp-global-sky-model-db/: Dockerfile  initdb-pgsphere.sh
scripts/: README  db_config.py  db_downgrade.sh  db_init.sh  db_init_data.py  db_migrate.sh  generate_db_schema.py  generate_models.py  gleam_to_csv.py  post_rcal_file.py  sky_model_client.py
sdp-global-sky-model/: values.yaml
sdp-global-sky-model/templates/: app-config.yaml  db-config.yaml
ska-sdp-global-sky-model/: Chart.yaml
src/gsm-demo/kubernetes/api/app/: config.py  main.py
src/gsm-demo/kubernetes/api/app/routers/: point_sources.py
src/gsm-demo/kubernetes/db_api/: app-config.yaml  db-config.yaml  db-secrets.yaml
src/ska_sdp_global_sky_model/: alembic.ini
src/ska_sdp_global_sky_model/alembic/: env.py  ff40d4b477ff_added_spectral_index_variability_.py
src/ska_sdp_global_sky_model/alembic/versions/: 06390ea194ef_new.py  07a981f1d3ba_update_models.py  0ab09cf0b2b6_create_foreignkey_to_metadata.py  0c62a981493f_new.py  1a8e0965597b_new.py  27fd3ee89965_schema_updates_and_make_all_fields_text.py  2bb60f51271b_add_catalog_metadata.py  32a6e8d2afd3_staging.py  5203c3819ac2_new_migration_note.py  5203c3819ac2_updating_nullable_version.py  524a45068400_re_index.py  5d5a9c279421_new.py  5e948c5fe753_new_migration_note.py  624b22e2fd6a_q3c_index.py  64ebd170bb89_new_upload_status_table.py  6ab7861d2188_initial_migration.py  6eb1d7a6693b_new.py  7367d297f19c_reindex.py  7d5fb33982fa_index_updates.py  878dccc7d809_new.py  981253740cab_new.py  a2abbfd9e5ed_new.py  aa2ef1559d3f_new.py  cc227c82b986_new.py  cdcba7972c35_new.py  d13f02112837_column_renames.py  d94590824140_remove_healpix_column_from_schemas.py  e3808621987c_new.py  ecd5d36e707a_updated_models.py  f0e33aa2056d_schema_updates_and_make_all_fields_text.py  f2822a3a3662_update_models.py  ff40d4b477ff_added_spectral_index_variability_.py
src/ska_sdp_global_sky_model/api/: crud.py  main.py
src/ska_sdp_global_sky_model/api/app/: __init__.py  config.py  crud.py  datastore.py  db_schema.py  gleam_catalog.py  ingest.py  main.py  model.py  models.py  request_responder.py  upload_manager.py
src/ska_sdp_global_sky_model/api/app/static/: upload.html
src/ska_sdp_global_sky_model/cli/: catalogue_delete.py  cleanup.py  common.py  common_cli.py  download_sm.py  ingest.py  ingest_cli.py  ingest_sm.py
src/ska_sdp_global_sky_model/configuration/: config.py  datastore.py
src/ska_sdp_global_sky_model/kubernetes/api/app/: config.py  db.py  main.py  models.py
src/ska_sdp_global_sky_model/kubernetes/api/app/routers/: point_sources.py
src/ska_sdp_global_sky_model/kubernetes/db_api/: app-config.yaml  db-config.yaml
src/ska_sdp_global_sky_model/templates/: table.html
src/ska_sdp_global_sky_model/utilities/: feature_toggle.py  helper_functions.py  local_sky_model.py  query_helpers.py  version_utils.py
tests/: conftest.py  test_cli.py  test_crud.py  test_db_schema.py  test_feature_toggle.py  test_generate_db_schema.py  test_helper_functions.py  test_ingest.py  test_local_sky_model.py  test_main.py  test_main_upload.py  test_model.py  test_request_responder.py  test_upload_manager.py  test_version_utils.py  test_watcher.py  utils.py
tests/data/: generic.csv  gleam.csv  metadata_generic_1.5.0.json  metadata_gleam_1.0.0.json  metadata_racs_2.0.0.json  metadata_rcal.json  metadata_rcal_1.1.0.json  metadata_test.json  metadata_test_1_1.0.0.json  metadata_test_2_1.0.0.json  racs.csv  rcal.csv  survey1.csv  survey2.csv  test_catalog_2.csv  test_catalogue_1.csv  test_catalogue_2.csv
tests/datasets/TEST/: 20  21
tmdata/ska/gsm/: global_dump.sql.gz.link
tmdata/ska/sdp/gsm/: ASKAP_20250206.tar.gz.link  Murchison_Widefield_Array_20250206.tar.gz.link  Murchison_Widefield_Array_20250218.tar.gz.link
