[project]
include = ["MANIFEST.skao.int"]
name = "ska_sdp_global_sky_model"
version = "0.1.4"
description = "SKA SDP Global Sky Model"
authors = [
    {name = "Jacob Maresca", email =  "jacob.maresca@akkodis.com>"},
    {name = "Christian Christelis", email =  "cchristelis@ska.ac.za"},
    {name = "Dominic Schaff", email =  "dominic@vivosa.co.za"}
]
readme = "README.rst"
packages = [{include = "ska_sdp_global_sky_model", from = "src" }]
requires-python = ">=3.10,<3.12"
license-files = ["LICENSE"]

[project.urls]
Documentation = "https://developer.skao.int/projects/ska-sdp-global-sky-model/en/latest/"
Repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-global-sky-model"
Changelog = "https://gitlab.com/ska-telescope/sdp/ska-sdp-global-sky-model/-/blob/main/CHANGELOG.rst"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "skao"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "primary"

[tool.poetry.dependencies]
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.9"
astroquery = "^0.4.7"
ska-ser-logging = "^0.4.3"
orjson = "^3.10.6"
python-multipart = "^0.0.9"
healpy = "^1.19.0"
alembic = "^1.13.2"
ska-sdp-config = "^1.4.0"
ska-sdp-dataproduct-metadata = "^1.0.0.post1"
psycopg = {extras = ["binary", "pool"], version = "^3.3.2"}
PyYAML = "^6.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.2"
pylint = "^3.3.4"
pylint-junit = "^0.3.5"
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
build = "^1.2.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-copybutton = "^0.5.2"
ska-ser-sphinx-theme = "^0.2.1"
sphinx-new-tab-link = "^0.6.1"

[tool.isort]
# auto generated files.
skip = ["src/ska_sdp_global_sky_model/alembic"]
profile = "black"
line_length = 99

[tool.black]
# auto generated files.
force-exclude = '''
src/ska_sdp_global_sky_model/alembic
'''
line-length = 99

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
gsm-ingest = "ska_sdp_global_sky_model.cli.ingest_sm:main"
gsm-download = "ska_sdp_global_sky_model.cli.download_sm:main"
