[project]
include = ["MANIFEST.skao.int"]
name = "ska_sdp_global_sky_model"
version = "0.4.0"
description = "SKA SDP Global Sky Model"
authors = [
    {name = "Jacob Maresca", email =  "jacob.maresca@akkodis.com>"},
    {name = "Christian Christelis", email =  "cchristelis@ska.ac.za"},
    {name = "Dominic Schaff", email =  "dominic@vivosa.co.za"}
]
readme = "README.rst"
packages = [{include = "ska_sdp_global_sky_model", from = "src" }]
requires-python = ">=3.10,<3.12"
license-files = ["LICENSE"]

[project.urls]
Documentation = "https://developer.skao.int/projects/ska-sdp-global-sky-model/en/latest/"
Repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-global-sky-model"
Changelog = "https://gitlab.com/ska-telescope/sdp/ska-sdp-global-sky-model/-/blob/main/CHANGELOG.rst"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "skao"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "primary"

[tool.poetry.dependencies]
fastapi = "^0.136.1"
sqlalchemy = "^2.0.49"
uvicorn = "^0.47.0"
httpx = "^0.28.1"
ska-ser-logging = "^0.4.3.post0"
python-multipart = "^0.0.28"  # needed by fastapi for parsing
alembic = "^1.18.4"
ska-sdp-config = "^1.6.1"
ska-sdp-datamodels = "^1.4.0"
ska-sdp-dataproduct-metadata = "^1.3.0"
psycopg = {extras = ["binary", "pool"], version = "^3.3.4"}
PyYAML = "^6.0.3"
packaging = "^26.2"
jinja2 = "^3.1.6"
numpy = "2.2.6"  # latest version that supports python3.10
urllib3 = "^2.7.0" # fixing security vulnerability
gitpython = "^3.1.50" # fixing security vulnerability
mako = "^1.3.12" # fixing security vulnerability

[tool.poetry.group.dev.dependencies]
isort = "^8.0.1"
black = "^26.3.1"
flake8 = "^7.3.0"
pylint = "^4.0.5"
pylint-junit = "^0.3.5"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
build = "^1.5.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-copybutton = "^0.5.2"
ska-ser-sphinx-theme = "^0.2.1"
sphinx-new-tab-link = "^0.8.1"
sphinxcontrib-programoutput = "^0.19"

[tool.isort]
# auto generated files.
skip = ["src/ska_sdp_global_sky_model/alembic/versions"]
profile = "black"
line_length = 99

[tool.black]
# auto generated files.
force-exclude = '''
src/ska_sdp_global_sky_model/alembic/versions
'''
line-length = 99

[tool.pylint.main]
# auto generated files.
ignore-paths = ["src/ska_sdp_global_sky_model/alembic/versions"]

[tool.pylint]
jobs = 0

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
gsm-cleanup = "ska_sdp_global_sky_model.cli.cleanup:main"
gsm-delete = "ska_sdp_global_sky_model.cli.catalogue_delete:main"
